updated style and fixed spacing of the social buttons

--- a/css/style.css
+++ b/css/style.css
@@ -29,13 +29,15 @@ body {
      display: flex;
      flex-direction: column;
      margin: 0px;
-     border-left: 1px solid #dbd8cf;
-		background: linear-gradient(left, #eee  0%, #fff 10%);
-		background: -ms-linear-gradient(left, #eee  0%,#fff 10%);
-		background: -moz-linear-gradient(left, #eee  0%,#fff 10%);
-		background: -webkit-linear-gradient(left, #eee  0%, #fff 10%);
-		box-shadow: -44px 120px 80px -72px #fff inset, -44px -120px 80px -72px #fff inset;
-    min-height: 400px;
+     background-color:hsla(265,63%,98%,1);
+     background-image:
+     radial-gradient(at 36% 12%, hsla(42,65%,77%,1) 0px, transparent 50%),
+     radial-gradient(at 9% 15%, hsla(1,78%,61%,1) 0px, transparent 50%),
+     radial-gradient(at 80% 91%, hsla(321,82%,76%,1) 0px, transparent 50%),
+     radial-gradient(at 41% 23%, hsla(311,67%,79%,1) 0px, transparent 50%),
+     radial-gradient(at 69% 24%, hsla(244,82%,73%,1) 0px, transparent 50%),
+     radial-gradient(at 73% 0%, hsla(325,69%,62%,1) 0px, transparent 50%),
+     radial-gradient(at 19% 79%, hsla(27,63%,73%,1) 0px, transparent 50%);
 }
 
 
@@ -69,16 +71,29 @@ a {
      text-decoration: none;
 }
 
+.main-container{
+     display: flex;
+     flex-direction: column;
+     align-items: flex-start;
+     backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+    background-color: rgba(255, 255, 255, 0.75);
+    border-radius: 12px;
+    border: 1px solid rgba(209, 213, 219, 0.3);
+    margin: 2em;
+}
 
 .hero{
      display: flex;
      flex-direction: row;
      align-items: center;
+     height: 100%;
+     
 }
 
 .hero-img{
      width: 100%;
-     height:auto;
+     height: auto;
      align-content: center;
 }
 
@@ -98,6 +113,15 @@ a {
      font-size: 1.25em;
 }
 
+.horizontal-rule{
+     margin-top: 2em;
+     border: 0;
+     height: 2px;
+     width: 90%;
+     background-image: linear-gradient(to right, transparent, rgb(140, 38, 204), transparent); 
+     align-self: center;
+}
+
 footer {
      font-family: Helvetica;
      text-align: center;
@@ -112,7 +136,7 @@ footer {
 nav{
      display: flex;
      flex-wrap: wrap;
-     justify-content: flex-end;
+     justify-content: flex-start;
      align-items: center;
      padding: 1rem 2rem;
 }
@@ -154,21 +178,32 @@ nav{
 /* Social Buttons
 /*******************************************/
 
+.social-div{
+     display: flex;
+     flex-direction: column;
+     align-self: center;
+}
+
+.social-nav{
+     width: 100%;
+     display: flex;
+     flex-direction: row;
+}
+
 span{
-     font-size: 3em;
-     height: 15%;
-     padding: calc(3px + 1.5625vw);
+     font-size: 1.5em;
 }
 
 
 .social{
      margin: .15em;
      display: flex;
+     width: 60vw;
+     height: 6em;
      flex-direction: row;
      align-items: center;
      justify-content: space-around;
-     padding: calc(3px + 1.5625vw);
-     width: 60vw;
+    
 }
 
 .social a {
@@ -178,10 +213,10 @@ span{
      height: 60px;
      text-align: center;
      line-height: 68px;
-     background: #333;
+     background: rgb(247, 163, 74);
      border-radius: 50%;
      font-size: 30px;
-     color: #666;
+     color: rgb(255, 255, 255);
      transition: .5s;
 } 
 
@@ -193,7 +228,7 @@ span{
      width: 100%;
      height: 100%;
      border-radius: 50%;
-     background: #0087ca;
+     background: rgb(247, 163, 74);
      transition: .5s;
      transform: scale(.9);
      z-index: -1;
@@ -201,13 +236,13 @@ span{
 
 .social a:hover::before {
      transform: scale(1.1);
-     box-shadow: 0 0 15px #0087ca;
+     box-shadow: 0 0 15px rgb(247, 163, 74);
    }
 
 .social a:hover {
-     color: #0087ca;
-     box-shadow: 0 0 5px #0087ca;
-     text-shadow: 0 0 5px #0087ca;
+     color: rgb(255, 255, 255);
+     box-shadow: 0 0 5px rgb(225, 177, 125);
+     text-shadow: 0 0 5px rgb(225, 177, 125);
    }
     
 
@@ -295,8 +330,9 @@ input, select, textarea, label {
 
 .about-header{
      font-size: 2em;
-     font-weight: 700;
+     font-weight: 600;
      text-align: center;
+     margin-top: 1em;
 }
 
  div.about{
@@ -310,15 +346,11 @@ input, select, textarea, label {
      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
      transition: 0.3s;
      border-radius: 5px;
-     background-color:#99f1ff;
-     background-image:
-     radial-gradient(at 69% 42%, hsla(157,60%,75%,1) 0px, transparent 50%),
-     radial-gradient(at 20% 62%, hsla(337,77%,75%,1) 0px, transparent 50%),
-     radial-gradient(at 69% 33%, hsla(305,63%,64%,1) 0px, transparent 50%),
-     radial-gradient(at 80% 71%, hsla(269,75%,77%,1) 0px, transparent 50%),
-     radial-gradient(at 37% 6%, hsla(110,90%,70%,1) 0px, transparent 50%),
-     radial-gradient(at 31% 26%, hsla(85,94%,78%,1) 0px, transparent 50%);
-     /* background-image: linear-gradient(to right top, #693cad58, #d2c0ee, #f7f4fd, #ffffff); */
+     backdrop-filter: blur(16px) saturate(180%);
+     -webkit-backdrop-filter: blur(16px) saturate(180%);
+     background-color: rgba(255, 255, 255, 0.75);
+     border-radius: 12px;
+     border: 1px solid rgba(209, 213, 219, 0.3);
 }
 
 div.about:hover{
@@ -354,6 +386,12 @@ img.portrait{
      display: flex;
      flex-wrap: wrap;
      padding: calc(25px + 1.5625vw);
+     backdrop-filter: blur(16px) saturate(180%);
+     -webkit-backdrop-filter: blur(16px) saturate(180%);
+     background-color: rgba(255, 255, 255, 0.75);
+     border-radius: 12px;
+     border: 1px solid rgba(209, 213, 219, 0.3);
+     margin: 2em;
 }
 
 .bio-items{
@@ -395,14 +433,13 @@ li.post{
      height: 350px;
      margin: 1em;
      border-radius: 20px;
-     background: #f5f5f5;
+     background: whitesmoke;
      padding: 1.8rem;
      border: 2px solid #c3c6ce;
      transition: 0.5s ease-out;
      overflow:hidden;
      list-style: none;
-     box-shadow:  20px 20px 60px #d9d9d9,
-             -20px 60px #ffffff;
+     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
 .blog-details{
@@ -440,7 +477,12 @@ li.post{
      width: 60vw;
      align-self: center;
      padding: 1em;
-     margin: .5em;
+     backdrop-filter: blur(16px) saturate(180%);
+     -webkit-backdrop-filter: blur(16px) saturate(180%);
+     background-color: rgba(255, 255, 255, 0.822);
+     border-radius: 12px;
+     border: 1px solid rgba(209, 213, 219, 0.3);
+     margin: 2em;
 }
 
 .blog-content { 
